# plutus

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.rst
scripts/: README_MCP_SETUP.md
src/: utils.py
src/core/: instrument.py  market.py
src/datahub/: data_handler.py  datahub.py  redis_datahub.py
src/plutus/core/: bot.py  environment.py  instrument.py  market.py  order.py  quote.py
src/plutus/data/: csv_interface.py
src/plutus/datahub/: asyncdatahub.py  data_handler.py  datahub.py  redis_datahub.py
src/plutus/evaluation/: performance.py
tests/data/: test_csv_interface.py
tests/data/model/: test_quote.py  test_quote_namedtuple.py
tests/sample_data/: .metadata_cache.db
tests/sample_data/csv/: .metadata_cache.db
tests/sample_data/parquet/: quote_adjclose.parquet  quote_adjhigh.parquet  quote_adjlow.parquet  quote_adjopen.parquet  quote_askprice.parquet  quote_asksize.parquet  quote_average.parquet  quote_bidprice.parquet  quote_bidsize.parquet  quote_ceil.parquet  quote_change.parquet  quote_close.parquet  quote_dailyforeignbuy.parquet  quote_dailyforeignsell.parquet  quote_dailyvolume.parquet  quote_floor.parquet  quote_foreignbuy.parquet  quote_foreignbuyvalue.parquet  quote_foreignroom.parquet  quote_foreignsell.parquet  quote_foreignsellvalue.parquet  quote_futurecontractcode.parquet  quote_high.parquet  quote_low.parquet  quote_matched.parquet  quote_matchedvolume.parquet  quote_max.parquet  quote_min.parquet  quote_oi.parquet  quote_open.parquet  quote_reference.parquet  (+10 more)
tests/test_evaluation/: test_performance.py
(+5 files in other folders)
