[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plutus"
version = "0.0.1"
authors = [
  { name="Dan", email="dan@algotrade.vn" },
]
description = "Plutus Framework"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/algotradevn/plutus"
Issues = "https://github.com/algotradevn/plutus/issues"